@@ -92,7 +92,7 @@
               <ul data-role="listview" data-inset="true" data-theme="d" data-divider-theme="c">
                 <li data-role="list-divider">Interact</li>
                 <li data-icon="delete"><a href="#" id="patient-delete">Delete this patient</a></li>
-                <li data-icon="forward"><a href="#" id="patient-store">Send to DICOM modality</a></li>
+                <li data-icon="forward"><a href="#" id="patient-store">Send to remote modality</a></li>
                 <li data-icon="star"><a href="#" id="patient-anonymize">Anonymize</a></li>
               </ul>
 
